# CropImage

./: CMakeLists.txt  CropImage.cpp  README.md  cropImage.cpp
test_image/: 1.xml  10.xml  11.xml  12.xml  13.xml  14.xml  15.xml  16.xml  2.xml  3.xml  4.xml  5.xml  6.xml  7.xml  8.xml  99.xml
